<resources>
    <string name="app_name">Camera Translator</string>
    <string name="text">Text</string>
    <string name="object">Object</string>
    <string name="object_detection">Nhận diện vật thể</string>
    <string name="all_object_detected">Tất cả vật thể:</string>
    <string name="example">Ví dụ</string>
    <string name="something_went_wrong">Ôi không! Có lỗi xảy ra.</string>
    <string name="select_a_photo">Chọn một hình ảnh</string>
    <string name="setting">Cài đặt ngôn ngữ</string>
    <string name="history">Lịch sử</string>
    <string name="flash_card">Flash card</string>
    <string name="language">Ngôn ngữ</string>
    <string name="new_set_name">Tên của bộ Flash card mới</string>
    <string name="done">Hoàn tất</string>
    <string name="cancel">Hủy</string>
    <string name="add_new_set_successfully">Thêm bộ flashcard mới thành công</string>
    <string name="this_field_cannot_be_empty">Không được để trống trường này</string>
    <string name="not_learned">Chưa thuộc</string>
    <string name="next">Sau</string>
    <string name="prev">Trước</string>
    <string name="page">%d / %d</string>
    <string name="no_card_found">Chưa có flashcard nào</string>
    <string name="add_to_set">Thêm vào bộ</string>
    <string name="add_flashcard">Thêm flashcard</string>
    <string name="add">Thêm</string>
    <string name="select_a_set">Chọn 1 bộ để thêm Flashcard</string>
    <string name="added_flashcard">Đã thêm flashcard</string>
</resources>
