<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBackground"
    android:orientation="vertical"
    tools:context=".ui.addflashcard.AddFlashCardActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/add_flashcard"
        app:titleTextColor="#fff" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp">

        <include layout="@layout/layout_flashcard_front" />

    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/btn_add_to_set"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="?attr/selectableItemBackground"
        android:drawableEnd="@drawable/ic_next"
        android:padding="8dp"
        android:text="@string/add_to_set"
        android:textColor="@color/colorBlack"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_background_primary"
            android:gravity="center"
            android:text="@string/add"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_background_secondary"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>