<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.setdetail.SetDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        app:navigationIcon="@drawable/ic_back"
        app:titleTextColor="#fff" />

    <TextView
        android:id="@+id/tv_no_flashcard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_card_found"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/something_went_wrong"
        android:textColor="@color/colorError"
        android:textSize="24sp"
        android:visibility="gone" />

    <com.wajahatkarim3.easyflipview.EasyFlipView
        android:id="@+id/flipView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="1"
        app:autoFlipBack="false"
        app:flipDuration="200"
        app:flipEnabled="true"
        app:flipFrom="right"
        app:flipOnTouch="false"
        app:flipType="horizontal">

        <include layout="@layout/layout_flashcard_back" />

        <include layout="@layout/layout_flashcard_front" />

    </com.wajahatkarim3.easyflipview.EasyFlipView>

    <RelativeLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:paddingEnd="12dp"
            android:paddingBottom="8dp"
            android:text="@string/page"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_background_primary"
            android:drawableEnd="@drawable/ic_next"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:paddingEnd="12dp"
            android:paddingBottom="8dp"
            android:text="@string/next"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/button_background_primary"
            android:drawableStart="@drawable/ic_prev"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:paddingEnd="12dp"
            android:paddingBottom="8dp"
            android:text="@string/prev"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />
    </RelativeLayout>

</LinearLayout>